# hakaton-it_call

./: .env.example  .pre-commit-config.yaml  Makefile  Readme.md  pyproject.toml  test.py
app/application/api/: healthcheck.py  lifespan.py  main.py
app/application/api/users/: routers.py  schemas.py
app/domain/entities/: base.py  users.py
app/domain/events/: base.py  users.py
app/domain/exceptions/: otps.py  users.py  verification_tokens.py
app/domain/values/: users.py
app/infrastructure/exceptions/: base.py  cookies.py  senders.py
app/infrastructure/migrations/versions/: 2024-07-02_09-54_initial.py  2024-07-03_11-51_initial.py  2024-07-03_17-13_add_users_verification_token.py  2024-07-12_19-33_add_user_user_timezone.py
app/infrastructure/models/: users.py
app/infrastructure/models/common/: base.py
app/infrastructure/repositories/common/: database.py  exception_mapper.py
app/infrastructure/repositories/users/: base.py  converters.py  memory.py  sqlalchemy.py
app/infrastructure/scheduler/: base.py  scheduler.py
app/infrastructure/security/cookies/: base.py  jwt.py
app/infrastructure/services/codes/: base.py  redis.py
app/infrastructure/services/otps/: base.py  redis.py
app/infrastructure/services/senders/: base.py  composed.py  dummy.py  smtp.py
app/infrastructure/services/smtp/: base.py  gmail.py
app/logic/: init.py
app/logic/commands/: users.py
app/logic/events/: users.py
app/logic/exceptions/: users.py
app/logic/queries/: users.py
app/settings/: settings.py
docker_compose/: app.yaml  kafka.yaml  redis.yaml  storages.yaml
(+11 files in other folders)
